Feat: Loading BIM mock up images

--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,10 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: darkseagreen;
   }
+}
+
+.loaded-bim {
+  padding: 200px 50px;
 }
